# OpenRTM-aist

./: CMakeLists.txt  COPYRIGHT  README  README.jp  configure.ac
docs/: CMakeLists.txt
etc/: CMakeLists.txt  rtc.conf.sample  svc.names.htiop.conf.in  svc.names.ssliop.conf.in
etc/tao_diop/: rtc.diop.conf.in
etc/tao_htiop/: rtc.htiop.conf.in  svc.conf  svc.htiop.conf.in
etc/tao_shmiop/: rtc.shmiop.conf.in  svc.conf
etc/tao_ssliop/: rtc.ssliop.conf.in  svc.conf.in  svc.ssliop.conf.in
examples/: CMakeLists.txt
examples/Analyzer/: CMakeLists.txt
examples/AutoTest/: CMakeLists.txt  ConnectTest.py  CorbaNaming.py  TestsConnection.py  rtc_handle.py
examples/Composite/: CMakeLists.txt
examples/ConfigSample/: CMakeLists.txt
examples/ConsoleIn/: CMakeLists.txt
examples/ConsoleInOutDocker/: CMakeLists.txt  ConsoleIn.docker  ConsoleOut.docker  rtc.docker.conf
examples/ConsoleOut/: CMakeLists.txt
examples/Controller/: CMakeLists.txt
examples/ExtTrigger/: CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt
examples/Motor/: CMakeLists.txt
examples/MyServiceConsumer/: CMakeLists.txt
examples/MyServiceProvider/: CMakeLists.txt
examples/Sensor/: CMakeLists.txt
examples/SeqIn/: CMakeLists.txt
examples/SeqOut/: CMakeLists.txt
examples/Serializer/: CMakeLists.txt
examples/StaticFsm/: CMakeLists.txt
examples/StringIO/: CMakeLists.txt
examples/Templates/: CMakeLists.txt
examples/Throughput/: CMakeLists.txt
examples/tests/: AddRemoveMemberSDOPackageTest.py  AddRemoveOrganizationSDOPackageTest.py  AddRemoveRTCTest.py  AttachDetachRTCTest.py  ConfigurationSDOPackageTest.py  ConnectRTCTest.py  CreateDeleteRTCTest.py  DataPortTest.py  ManagerTest.py  OrganizationSDOPackageTest.py  RTCTest.py  SDOPackageTest.py  ServiceProfileSDOPackageTest.py  SetMemberSDOPackageTest.py  rtc_handle.py
scripts/: OpenRTM-build-Windows.bat  openrtm2_install_raspbian.sh  openrtm2_install_ubuntu.sh
scripts/ubuntu_2204/: Dockerfile  Dockerfile.devel-rtm  Dockerfile.package  fluent-bit-4.0.3-ubuntu.patch
scripts/ubuntu_2404/: Dockerfile  Dockerfile.devel-rtm  Dockerfile.package  fluent-bit-3.2.7-ubuntu.patch
src/: CMakeLists.txt
src/ext/: CMakeLists.txt  Makefile.am
src/ext/ec/: CMakeLists.txt
src/ext/ec/logical_time/: CMakeLists.txt
src/ext/ec/logical_time/example/: TickApp.py
src/ext/ec/rtpreempt/: CMakeLists.txt
src/ext/http/: CMakeLists.txt  rtc.http.conf.in  rtc.https.conf.in  rtc.ws.conf.in  rtc.wss.conf.in
src/ext/interrupt_task/: CMakeLists.txt
src/ext/local_service/nameservice_file/: CMakeLists.txt
src/ext/logger/: CMakeLists.txt
src/ext/logger/fluentbit_stream/: CMakeLists.txt  FluentBit.cpp  FluentBit.h  flb_api_wrapper.c  flb_api_wrapper.h  fluentbit.conf  rtc.fluentbit_stream.conf.in
src/ext/sdo/: CMakeLists.txt
src/ext/sdo/extended_fsm/: CMakeLists.txt
src/ext/sdo/fsm4rtc_observer/: CMakeLists.txt
src/ext/sdo/logger/: CMakeLists.txt
src/ext/sdo/observer/: CMakeLists.txt
src/ext/ssl/: CMakeLists.txt  root-sample.crt  rtc.ssl.conf.in  server-sample.pem
src/ext/transport/: CMakeLists.txt
src/ext/transport/FastRTPS/: CMakeLists.txt  CORBACdrDataPubSubTypes.h  FastRTPSInPort.cpp  FastRTPSInPort.h  FastRTPSManager.cpp  FastRTPSManager.h  FastRTPSOutPort.cpp  FastRTPSOutPort.h  FastRTPSTransport.cpp
src/ext/transport/OpenSplice/: CMakeLists.txt
src/ext/transport/ROS2Transport/: CMakeLists.txt  FastRTPsQoSExample.xml  ROS2Serializer.h  appexamplecert.pem  appexamplekey.pem  mainexamplecacert.pem  rtc.ros2.conf.in  rtc.ros2.ssl.conf.in
src/ext/transport/ROSTransport/: CMakeLists.txt  ROSInPort.cpp  ROSInPort.h  ROSOutPort.cpp  ROSOutPort.h  ROSSerializer.cpp  ROSTopicManager.cpp  ROSTopicManager.h  ROSTransport.cpp  rtc.ros.conf.in
src/ext/transport/SSMTransport/: CMakeLists.txt  SSMInPort.cpp  SSMInPort.h  SSMOutPort.cpp  SSMOutPort.h  SSMTransport.cpp  rtc.ssm.conf.in
src/lib/: CMakeLists.txt
src/lib/coil/: CMakeLists.txt  configure.ac
src/lib/hrtm/: CMakeLists.txt
src/lib/rtm/: CMakeLists.txt  CORBA_RTCUtil.cpp  CORBA_RTCUtil.h  CorbaNaming.cpp  DefaultConfiguration.h  ExecutionContextBase.cpp  ExecutionContextWorker.cpp  ExecutionContextWorker.h  InPortBase.cpp  InPortCorbaCdrConsumer.cpp  InPortCorbaCdrProvider.cpp  InPortDSConsumer.cpp  InPortSHMConsumer.cpp  InPortSHMProvider.cpp  LocalServiceAdmin.cpp  Manager.cpp  Manager.h  ManagerConfig.cpp  ManagerServant.cpp  ModuleManager.cpp  ModuleManager.h  NVUtil.cpp  NamingManager.cpp  OutPortBase.cpp  OutPortCorbaCdrConsumer.cpp  OutPortCorbaCdrProvider.cpp  OutPortDSConsumer.cpp  OutPortSHMConsumer.cpp  OutPortSHMProvider.cpp  PeriodicExecutionContext.cpp  PortAdmin.cpp  PortBase.cpp  RTObject.cpp  Typename.h  (+4 more)
utils/: CMakeLists.txt
utils/cmake/: CMakeLists.txt  OpenRTMConfig.cmake.in  OpenRTMConfig_TAO_Linux.cmake.in
utils/environment-setup-scripts/: CMakeLists.txt
utils/openrtmNames/: BindingIterator.cpp  CMakeLists.txt  NamingContext.cpp  NamingContext.h  ObjectBinding.cpp  OpenrtmNamesPlugin.cpp  OpenrtmNamesPlugin.h  openrtmNames.cpp  rtc.names.http.omniorb.conf.in  rtc.names.http.tao.conf.in  rtc.names.https.conf.in  rtc.names.https.omniorb.conf.in  rtc.names.shm.tao.conf.in  rtc.names.ssl.conf.in  rtc.names.ssl.omniorb.conf.in  rtc.names.ssl.tao.conf.in  rtc.names.tcp.omniorb.conf.in  rtc.names.tcp.tao.conf.in  rtc.names.ws.omniorb.conf.in  rtc.names.wss.conf.in  rtc.names.wss.omniorb.conf.in
utils/rtc-link/: RtcLink.py  RtcLink.pyw  RtmCompData.py  RtmDialog.py  RtmDtdValidator.py  RtmFrame.py  RtmLineUtil.py  RtmNSHelper.py  RtmParser.py  RtmProfileList.py  RtmSystemDraw.py  RtmTreeCtrl.py  rtc-link
utils/rtc-template/: CMakeLists.txt  cxx_gen.py  cxx_svc_impl.py  gen_base.py  rtc-template
utils/rtcd/: CMakeLists.txt  rtcd2_docker
utils/rtcprof/: CMakeLists.txt  rtcprof2_docker
utils/rtm-config/: CMakeLists.txt
utils/rtm-manager/: NSHelper.py  rtm-manager
utils/rtm-naming/: CMakeLists.txt  Makefile.am  rtm-naming.in
utils/rtm-skelwrapper/: CMakeLists.txt  rtm-skelwrapper  skel_wrapper.py
win32/OpenRTM-aist/: prepare_openrtm.sh
(+27 files in other folders)
