cmake_minimum_required (VERSION 3.16)

project (ConsoleInOutDocker
	VERSION ${RTM_VERSION}
	LANGUAGES CXX)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ConsoleIn.docker DESTINATION ${INSTALL_RTM_EXAMPLE_DOCKER_DIR} COMPONENT examples)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ConsoleOut.docker DESTINATION ${INSTALL_RTM_EXAMPLE_DOCKER_DIR} COMPONENT examples)
