## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for external libraries
##
## $Id$
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

#SUBDIRS = local_service ec sdo
SUBDIRS = @EXT_TARGET@
DIST_SUBDIRS = local_service ec sdo logger ssl



